--- a/SisMaper/Views/ViewEscolherLote.xaml
+++ b/SisMaper/Views/ViewEscolherLote.xaml
@@ -135,7 +135,7 @@
         </TextBlock>
         <DataGrid
             x:Name="DataGridEscolherLote"
-            templates:ColumnDataGridSave.SaveSizes="True"
+            templates:SaveUIProperty.SaveSizes="True"
             ItemsSource="{Binding Lotes}"
             SelectedItem="{Binding LoteSelecionado}"
             AutoGenerateColumns="False"
