--- a/SisMaper/Views/ViewNaturezas.xaml
+++ b/SisMaper/Views/ViewNaturezas.xaml
@@ -7,8 +7,7 @@
     xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:m="clr-namespace:SisMaper.ViewModel"
     xmlns:templates="clr-namespace:SisMaper.Views.Templates"
-    xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-    Dialog:DialogParticipation.Register="{Binding}"
+    templates:DialogParticipation.MyRegister="{Binding}"
     x:Class="SisMaper.Views.ViewNaturezas"
     mc:Ignorable="d"
     Title="Naturezas"
