--- a/SisMaper/Views/MainWindow.xaml
+++ b/SisMaper/Views/MainWindow.xaml
@@ -10,14 +10,13 @@
     xmlns:local="clr-namespace:SisMaper.Views"
     xmlns:vm="clr-namespace:SisMaper.ViewModel"
     xmlns:sismaper="clr-namespace:SisMaper"
+    xmlns:templates="clr-namespace:SisMaper.Views.Templates"
     xmlns:iconPacks="clr-namespace:MahApps.Metro.IconPacks;assembly=MahApps.Metro.IconPacks.Material"
     xmlns:converter="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
-    xmlns:dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
-    dialog:DialogParticipation.Register="{Binding}"
+    templates:DialogParticipation.MyRegister="{Binding}"
     mc:Ignorable="d"
     TitleCharacterCasing="Normal"
-    Title="SisMaper"
-    TitleForeground="{DynamicResource SisMaper.Dark.Theme}"
+    Title="{Binding SelectedItem.Name, ElementName=TabCtrl, StringFormat='SisMaper - {0}'}"
     Height="728"
     Width="1489"
     SaveWindowPosition="True">
@@ -35,7 +34,8 @@
         <DataTemplate>
             <TextBlock
                 Text="{TemplateBinding Content}"
-                FontFamily="{DynamicResource MahApps.Fonts.Family.Button}"
+                Foreground="{DynamicResource SisMaper.Dark.Theme}"
+                FontFamily="{DynamicResource MahApps.Fonts.Family.Control}"
                 FontSize="{DynamicResource MahApps.Font.Size.Window.Title}"
                 FontWeight="Bold"
                 TextTrimming="CharacterEllipsis"
@@ -45,7 +45,7 @@
     </mah:MetroWindow.TitleTemplate>
     <mah:MetroWindow.Resources>
         <ControlTemplate
-            x:Key="MahApps.Templates.PackIconMaterial"
+            x:Key="MainWindow.Templates.PackIconMaterial"
             TargetType="{x:Type iconPacks:PackIconMaterial}">
             <Grid>
                 <Border
@@ -85,7 +85,7 @@
             </Grid>
         </ControlTemplate>
         <Style
-            x:Key="MenuPackIconMaterial"
+            x:Key="MainWindow.Menu.PackIconMaterial"
             TargetType="{x:Type iconPacks:PackIconMaterial}">
             <Setter
                 Property="Height"
@@ -116,7 +116,7 @@
                 Value="False" />
             <Setter
                 Property="Template"
-                Value="{DynamicResource MahApps.Templates.PackIconMaterial}" />
+                Value="{DynamicResource MainWindow.Templates.PackIconMaterial}" />
             <Setter
                 Property="HorizontalContentAlignment"
                 Value="Stretch" />
@@ -141,7 +141,7 @@
             </Style.Triggers>
         </Style>
         <ControlTemplate
-            x:Key="MahApps.Templates.PackIconModern"
+            x:Key="MainWindow.Templates.PackIconModern"
             TargetType="{x:Type icons:PackIconModern}">
             <Grid>
                 <Border
@@ -181,7 +181,7 @@
             </Grid>
         </ControlTemplate>
         <Style
-            x:Key="MenuPackIconModern"
+            x:Key="MainWindow.Menu.PackIconModern"
             TargetType="{x:Type icons:PackIconModern}">
             <Setter
                 Property="Height"
@@ -212,7 +212,7 @@
                 Value="False" />
             <Setter
                 Property="Template"
-                Value="{StaticResource MahApps.Templates.PackIconModern}" />
+                Value="{StaticResource MainWindow.Templates.PackIconModern}" />
             <Setter
                 Property="HorizontalContentAlignment"
                 Value="Stretch" />
@@ -237,7 +237,7 @@
             </Style.Triggers>
         </Style>
         <ControlTemplate
-            x:Key="MahApps.Templates.PackIconOcticons"
+            x:Key="MainWindow.Templates.PackIconOcticons"
             TargetType="{x:Type icons:PackIconOcticons}">
             <Grid>
                 <Border
@@ -277,7 +277,7 @@
             </Grid>
         </ControlTemplate>
         <Style
-            x:Key="MenuPackIconOcticons"
+            x:Key="MainWindow.Menu.PackIconOcticons"
             TargetType="{x:Type icons:PackIconOcticons}">
             <Setter
                 Property="Height"
@@ -308,7 +308,7 @@
                 Value="False" />
             <Setter
                 Property="Template"
-                Value="{StaticResource MahApps.Templates.PackIconOcticons}" />
+                Value="{StaticResource MainWindow.Templates.PackIconOcticons}" />
             <Setter
                 Property="HorizontalContentAlignment"
                 Value="Stretch" />
@@ -411,155 +411,6 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <Style
-            x:Key="MahApps.Styles.Thumb.ToolBar"
-            TargetType="{x:Type Thumb}">
-            <Setter
-                Property="Cursor"
-                Value="SizeAll" />
-            <Setter
-                Property="OverridesDefaultStyle"
-                Value="true" />
-            <Setter
-                Property="Template">
-                <Setter.Value>
-                    <ControlTemplate
-                        TargetType="{x:Type Thumb}">
-                        <Border
-                            Background="Transparent"
-                            Margin="0 3 0 3"
-                            SnapsToDevicePixels="True">
-                            <Rectangle
-                                Width="4.9">
-                                <Rectangle.Fill>
-                                    <DrawingBrush
-                                        TileMode="Tile"
-                                        ViewboxUnits="Absolute"
-                                        Viewbox="0,0,5,4"
-                                        ViewportUnits="Absolute"
-                                        Viewport="0,0,5,4">
-                                        <DrawingBrush.Drawing>
-                                            <GeometryDrawing
-                                                Brush="{DynamicResource MahApps.Brushes.Gray3}">
-                                                <GeometryDrawing.Geometry>
-                                                    <GeometryGroup>
-                                                        <RectangleGeometry
-                                                            Rect="0,0,1,1" />
-                                                        <RectangleGeometry
-                                                            Rect="4,0,1,1" />
-                                                        <RectangleGeometry
-                                                            Rect="2,2,1,1" />
-                                                    </GeometryGroup>
-                                                </GeometryDrawing.Geometry>
-                                            </GeometryDrawing>
-                                        </DrawingBrush.Drawing>
-                                    </DrawingBrush>
-                                </Rectangle.Fill>
-                            </Rectangle>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style
-            x:Key="MahApps.Styles.ToggleButton.ToolBarOverflow"
-            TargetType="{x:Type ToggleButton}">
-            <Setter
-                Property="OverridesDefaultStyle"
-                Value="true" />
-            <Setter
-                Property="Template">
-                <Setter.Value>
-                    <ControlTemplate
-                        TargetType="{x:Type ToggleButton}">
-                        <Border
-                            x:Name="Bd"
-                            Background="Transparent"
-                            CornerRadius="0,3,3,0"
-                            SnapsToDevicePixels="true">
-                            <Grid>
-                                <Rectangle
-                                    x:Name="Rectangle"
-                                    Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                                    Height="1"
-                                    Margin="2 8"
-                                    VerticalAlignment="Bottom"
-                                    Width="6" />
-                                <Path
-                                    x:Name="Arrow"
-                                    Data="F0 M 0,0 L 6,0 3,3 Z"
-                                    Fill="{DynamicResource MahApps.Brushes.ThemeForeground}"
-                                    Margin="2 3"
-                                    VerticalAlignment="Bottom" />
-                                <ContentPresenter />
-                            </Grid>
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger
-                                Property="IsMouseOver"
-                                Value="true">
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Arrow"
-                                    Value="{DynamicResource MahApps.Brushes.Accent}" />
-                                <Setter
-                                    Property="Background"
-                                    TargetName="Bd"
-                                    Value="{DynamicResource MahApps.Brushes.Gray7}" />
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Rectangle"
-                                    Value="{DynamicResource MahApps.Brushes.Accent}" />
-                            </Trigger>
-                            <Trigger
-                                Property="IsKeyboardFocused"
-                                Value="true">
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Arrow"
-                                    Value="{DynamicResource MahApps.Brushes.Accent}" />
-                                <Setter
-                                    Property="Background"
-                                    TargetName="Bd"
-                                    Value="{DynamicResource MahApps.Brushes.Gray7}" />
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Rectangle"
-                                    Value="{DynamicResource MahApps.Brushes.Accent}" />
-                            </Trigger>
-                            <Trigger
-                                Property="IsChecked"
-                                Value="true">
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Arrow"
-                                    Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-                                <Setter
-                                    Property="Background"
-                                    TargetName="Bd"
-                                    Value="{DynamicResource MahApps.Brushes.Accent}" />
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Rectangle"
-                                    Value="{DynamicResource MahApps.Brushes.ThemeForeground}" />
-                            </Trigger>
-                            <Trigger
-                                Property="IsEnabled"
-                                Value="false">
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Arrow"
-                                    Value="{DynamicResource MahApps.Brushes.Transparent}" />
-                                <Setter
-                                    Property="Fill"
-                                    TargetName="Rectangle"
-                                    Value="{DynamicResource MahApps.Brushes.Transparent}" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
     </mah:MetroWindow.Resources>
     <Grid>
         <TabControl
@@ -570,7 +421,6 @@
             <TabItem Visibility="Collapsed"/>
             <TabItem
                 Visibility="{Binding PVendas, Mode=OneWay, Converter={StaticResource boolToVisibilityConverter}}"
-               
                 x:Name="Vendas"
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF1B4441">
@@ -579,7 +429,7 @@
                             Orientation="Vertical"
                             VerticalAlignment="Center">
                             <icons:PackIconMaterial
-                                Style="{DynamicResource MenuPackIconMaterial}"
+                                Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
                                 Kind="PointOfSale" />
                             <TextBlock
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -604,7 +454,7 @@
                             Orientation="Vertical"
                             VerticalAlignment="Center">
                             <icons:PackIconMaterial
-                                Style="{DynamicResource MenuPackIconMaterial}"
+                                Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
                                 Kind="CashMultiple" />
                             <TextBlock
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -616,12 +466,11 @@
                             Width="auto"
                             Height="auto"
                             HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            x:Name="RecebimentosView" />
+                            VerticalAlignment="Stretch"/>
             </TabItem>
             <TabItem
+                x:Name="Cadastros"
                 Visibility="{Binding PCadastro, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"
-               
                 Style="{DynamicResource SisMaper.MainWindow.TabItem.Menu}"
                 Foreground="#FF843700">
                 <TabItem.Header>
@@ -629,7 +478,7 @@
                             Orientation="Vertical"
                             VerticalAlignment="Center">
                             <icons:PackIconMaterial
-                                Style="{DynamicResource MenuPackIconMaterial}"
+                                Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
                                 Kind="BookEdit" />
                             <TextBlock
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -647,7 +496,7 @@
                                     Orientation="Vertical"
                                     VerticalAlignment="Center">
                                     <icons:PackIconOcticons
-                                        Style="{DynamicResource MenuPackIconOcticons}"
+                                        Style="{DynamicResource MainWindow.Menu.PackIconOcticons}"
                                         Kind="Package" />
                                     <TextBlock
                                         Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -671,7 +520,7 @@
                                     Orientation="Vertical"
                                     VerticalAlignment="Center">
                                     <icons:PackIconMaterial
-                                        Style="{DynamicResource MenuPackIconMaterial}"
+                                        Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
                                         Kind="AccountMultiple" />
                                     <TextBlock
                                         Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -694,7 +543,7 @@
                                     Orientation="Vertical"
                                     VerticalAlignment="Center">
                                     <icons:PackIconMaterial
-                                        Style="{DynamicResource MenuPackIconMaterial}"
+                                        Style="{DynamicResource MainWindow.Menu.PackIconMaterial}"
                                         Kind="AccountLock" />
                                     <TextBlock
                                         Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -714,7 +563,7 @@
                             Orientation="Vertical"
                             VerticalAlignment="Center">
                             <icons:PackIconModern
-                                Style="{DynamicResource MenuPackIconModern}"
+                                Style="{DynamicResource MainWindow.Menu.PackIconModern}"
                                 Kind="GraphBar" />
                             <TextBlock
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
@@ -732,7 +581,7 @@
                             Orientation="Vertical"
                             VerticalAlignment="Center">
                             <icons:PackIconModern
-                                Style="{DynamicResource MenuPackIconModern}"
+                                Style="{DynamicResource MainWindow.Menu.PackIconModern}"
                                 Kind="Settings" />
                             <TextBlock
                                 Style="{DynamicResource SisMaper.MainWindow.MainMenu.Head}"
